tdf#40575 remove obsolete MAX_DAYS check

Change-Id: Ifccf3a1fe27011a8e72464bf76cadcf16f5f5fa7